# PokemonCipher

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
assets/: .build_manifest.json  map.tmx
assets/animations/: bird_animations.xml  lamb_animations.xml  red_overworld.xml  wes_overworld.xml
assets/config/maps/: map_registry.lua
assets/config/ui/: pokemon_summary_layout.lua
assets/config/world/: character_assets.lua
assets/maps/: pallet_town.tmx  pallet_town_metatile_index.json
assets/maps/pallet_town/: map.tmx  pallet_town_map.tmx
assets/maps/pallet_town_players_house_2f/: pallet_town_players_house_2f_map.tmx
assets/maps/pallet_town_professor_oaks_lab/: pallet_town_professor_oaks_lab_map.pcmap  pallet_town_professor_oaks_lab_map.tmx
assets/maps/pallet_town_rivals_house/: pallet_town_rivals_house_map.tmx
assets/maps/route_1/: route_1_map.pcmap  route_1_map.tmx
assets/scripts/: dev_bootstrap_pallet.lua  intro_prologue.lua  oak_restore_eevee.lua
assets_raw/: README.md
saves/: slot1.sav
src/: Game.cpp  Game.h  GameBootstrap.cpp  GameContent.cpp  GameObject.cpp  GameObject.h  Map.cpp  Map.h  MapLoader.cpp  MapLoader.h  TextureManager.cpp  TextureManager.h  main.cpp
src/app/: LaunchOptions.cpp  LaunchOptions.h
src/ecs/: Component.h  ComponentType.h  Entity.h  EventManager.h  World.cpp  World.h
src/ecs/systems/: AnimationSystem.h  CameraSystem.h  CollisionSystem.cpp  CollisionSystem.h  DestructionSystem.h  DialogueSystem.h  EncounterSystem.h  InteractionSystem.h  KeyboardInputSystem.h  MovementSystem.h  RenderSystem.h  SpawnTimerSystem.h  StartMenuSystem.h  WaypointSystem.h
src/engine/: Game.cpp  Game.h  Map.cpp  Map.h  TextureManager.cpp  TextureManager.h  TilemapRenderer.cpp  TilemapRenderer.h
src/engine/ecs/: Component.h  ComponentType.h  Entity.h  World.cpp  World.h
src/engine/manager/: AssetManager.cpp  AssetManager.h  Scene.h  SceneManager.h
src/engine/map/: CompiledMapLoader.cpp  CompiledMapLoader.h  TmxMapLoader.cpp  TmxMapLoader.h
src/engine/utils/: Collision.cpp  Collision.h  Vector2D.cpp  Vector2D.h
src/game/: BattleScene.cpp  BattleScene.h  OverworldScene.cpp  OverworldScene.h  OverworldSceneDev.cpp  OverworldSceneEncounter.cpp  OverworldSceneInteraction.cpp  OverworldSceneMap.cpp  TitleScene.cpp  TitleScene.h
src/game/data/: SpeciesRegistry.cpp  SpeciesRegistry.h
src/game/dev/: OverworldDevConsole.cpp  OverworldDevConsole.h  OverworldDevConsoleEncounterHandlers.cpp  OverworldDevConsoleHandlers.h  OverworldDevConsoleInfoHandlers.cpp  OverworldDevConsoleParsing.cpp  OverworldDevConsoleParsing.h  OverworldDevConsoleScriptHandlers.cpp  OverworldDevConsoleStateHandlers.cpp  OverworldDevConsoleTravelHandlers.cpp
src/game/encounters/: WildEncounterService.cpp  WildEncounterService.h
src/game/events/: OverworldScript.h
src/game/save/: SaveGameStorage.cpp  SaveGameStorage.h
src/game/scripting/: LuaOverworldScriptLoader.cpp  LuaOverworldScriptLoader.h
src/game/state/: GameState.h
src/game/systems/: GridMovementSystem.h
src/game/ui/: DialogueOverlay.cpp  DialogueOverlay.h  FrlgTextRenderer.cpp  FrlgTextRenderer.h  PartyMenuLayout.cpp  PartyMenuLayout.h  PartyMenuOverlay.cpp  PartyMenuOverlay.h  PokemonSummaryLayout.cpp  PokemonSummaryLayout.h  PokemonSummaryLayoutProvider.cpp  PokemonSummaryLayoutProvider.h  PokemonSummaryOverlay.cpp  PokemonSummaryOverlay.h  PokemonSummaryOverlayInfoPage.cpp  PokemonSummaryOverlayMovesPage.cpp  PokemonSummaryOverlayRender.cpp  PokemonSummaryOverlaySkillsPage.cpp  PokemonSummaryRenderUtils.cpp  PokemonSummaryRenderUtils.h  StartMenuOverlay.cpp  StartMenuOverlay.h  SummaryContent.cpp  SummaryContent.h
src/manager/: AssetManager.cpp  AssetManager.h  Scene.cpp  Scene.h  SceneEntityFactory.cpp  SceneEntityFactory.h  SceneManager.h  SceneRuntimeHelpers.cpp  SceneRuntimeHelpers.h  SceneSetup.cpp  SceneSetup.h
src/utils/: Collision.cpp  Collision.h  Vector2D.cpp  Vector2D.h
tools/: build_assets.py  import_firered_pallet.py  import_firered_party_menu.py  import_firered_summary_assets.py  map_import_manifest.json  normalize_wes_sprites.py
tools/firered_import/: README.md  __init__.py  binary.py  context.py  image_utils.py  map_graphics.py  map_importer.py  map_layout.py  map_pipeline.py  map_writers.py  palette_utils.py  party_menu_importer.py  summary_importer.py
(+25 files in other folders)
